--- a/_data/events.yml
+++ b/_data/events.yml
@@ -805,6 +805,22 @@
   location: Prague, Czech Republic
   lang: en
 
+- title: IT Letnik
+  url: http://itletnik.ru
+  subject: "Kotlin integration into Java production"
+  speaker: Aleksey Zhidkov
+  date: 2015-06-11]
+  location: Novosibirsk, Russia
+  lang: ru
+  
+  - title: LambdaNsk
+  url: http://vk.com/lambdansk
+  subject: "Fuctional programming in Kotlin"
+  speaker: Aleksey Zhidkov
+  date: 2015-06-21]
+  location: Novosibirsk, Russia
+  lang: ru
+
 - title: JBCN Conference
   url: http://www.jbcnconf.com
   subject: "Kotlin: What can it do for me?"
