Pull request issues fixed

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -801,7 +801,7 @@
   url: http://itletnik.ru
   subject: "Kotlin integration into Java production"
   speaker: Aleksey Zhidkov
-  date: 2015-06-11]
+  date: 2015-06-11
   location: Novosibirsk, Russia
   lang: ru
   
@@ -809,7 +809,7 @@
   url: http://vk.com/lambdansk
   subject: "Functional programming in Kotlin"
   speaker: Aleksey Zhidkov
-  date: 2015-06-21]
+  date: 2015-06-21
   location: Novosibirsk, Russia
   lang: ru
 
